<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReverseShootingGallery</string>
    <string name="app_name_options">ReverseShootingGallery Options</string>
    <string name="action_options">Options</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_scores">High Scores</string>
    <string name="calibrate">Set Neutral Position</string>
    <string name="calibr_title">Calibration</string>
    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="rank3">3</string>
    <string name="rank4">4</string>
    <string name="rank5">5</string>
    <string name="hs_title">High Scores</string>
    <string name="ge_newgame">New Game</string>
    <string name="ge_discard">Discard</string>
    <string name="ge_title">Your Score This Round</string>
    <string name="app_by">App By</string>
    <string name="mobile_apps">"Mobile Applications"</string>
    <string name="version">Version</string>
    <string name="made_in">Made In</string>
    <string name="help_tilt">Tilt your device . . . </string>
    <string name="help_tilt_more">As you tilt your device, the target will move around on screen!</string>
    <string name="help_shoot"> . . . line up the target . . . </string>
    <string name="help_shoot_more">You can \"aim\" the target, but not the shot! (And the target scoots around on its own!)</string>
    <string name="help_hit"> . . . and shoot the target to score!</string>
    <string name="help_hit_more">Every so often, a shot is fired, scoring points if it hits the target!</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="reset_scores">Reset High Scores</string>
    <string name="alias">Alias:</string>
    <string name="pink">Pink Target</string>
    <string name="blue">Blue Target</string>
    <string name="rainbow">Rainbow Target</string>
    <string name="empty"/>
</resources>
