<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ex_tilt"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_tilt"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="35sp"
                android:textIsSelectable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_tilt_more"
                android:id="@+id/textView3"
                android:gravity="center_horizontal|top"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_shoot"
                android:id="@+id/textView1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="35sp"
                android:textIsSelectable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_shoot_more"
                android:id="@+id/textView2"
                android:gravity="center_horizontal|top"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:src="@drawable/ex_shoot"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout1"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ex_hit"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:id="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_hit"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="35sp"
                android:textIsSelectable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_hit_more"
                android:id="@+id/textView5"
                android:gravity="center_horizontal|top"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>