<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_by"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <!--suppress AndroidLintHardcodedText : Proper Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="John Kelly"
            android:id="@+id/textView1"
            android:layout_gravity="center"/>

        <!--suppress AndroidLintHardcodedText : Proper Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zachary Fleischman"
            android:id="@+id/textView2"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="false"
        android:layout_marginTop="56dp"
        android:layout_centerVertical="true">

        <!--suppress AndroidLintHardcodedText : version number-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/textView7"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v1.0.0"
            android:id="@+id/textView3"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="false"
        android:layout_marginTop="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <!--suppress AndroidLintHardcodedText : Proper Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_in"
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Colorado School of Mines"
            android:id="@+id/textView4"
            android:layout_gravity="center"/>

        <!--suppress AndroidLintHardcodedText : UID String-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CS498B F2013"
            android:id="@+id/textView5"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_apps"
            android:id="@+id/textView6"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>